ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascriptnext/numericSeparators/parser.numericSeparators.hexNegative/input.ts.stderr
error: Identifier cannot follow number
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascriptnext/numericSeparators/parser.numericSeparators.hexNegative/input.ts:8:3
  |
8 | 0_X0101
  |   ^

error: A numeric separator is only allowed between two digits
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascriptnext/numericSeparators/parser.numericSeparators.hexNegative/input.ts:2:3
  |
2 | 0x00_
  |   ^^

error: A numeric separator is only allowed between two digits
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascriptnext/numericSeparators/parser.numericSeparators.hexNegative/input.ts:5:3
  |
5 | 0x_110
  |   ^

error: A numeric separator is only allowed between two digits
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascriptnext/numericSeparators/parser.numericSeparators.hexNegative/input.ts:8:1
  |
8 | 0_X0101
  | ^

